--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "ios": "cap sync ios && cap open ios"
   },
   "dependencies": {
-    "@capacitor/core": "^5.0.0",
+    "@capacitor-community/sqlite": "^5.7.4",
     "@capacitor/camera": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
     "@capacitor/filesystem": "^5.0.0",
+    "@capacitor/ios": "^5.7.8",
     "@capacitor/network": "^5.0.0",
     "@capacitor/preferences": "^5.0.0",
-    "@capacitor-community/sqlite": "^5.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.6.2",
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "^5.4.0"
   }
 }
-
