--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,17 +17,17 @@ workflows:
       - '[ -d ios/App ] || { echo "ERROR: ios/App fehlt"; exit 1; }'
       - npx cap sync ios
 
-      # ⬇️ Code Signing: holt/erzeugt Profile & Zertifikate aus deiner ASC-Integration "asc"
+      # --- Pods (wie zuvor) ---
+      - cd ios/App && pod repo update
+      - cd ios/App && pod install --repo-update
+
+      # --- NEU: Code Signing vollautomatisch (ohne UI) ---
       - keychain initialize
       - app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
       - keychain add-certificates
       - xcode-project use-profiles
 
-      # CocoaPods
-      - cd ios/App && pod repo update
-      - cd ios/App && pod install --repo-update
-
-      # Export-Options für TestFlight
+      # --- Export-Options (wie zuvor) ---
       - |
         cat > /Users/builder/export_options.plist <<'PLIST'
         <?xml version="1.0" encoding="UTF-8"?>
@@ -39,9 +39,8 @@ workflows:
         </plist>
         PLIST
 
-      # Archiv + Export (jetzt mit eingebundenen Profiles)
-      - xcodebuild -workspace "ios/App/App.xcworkspace" -scheme "App" -configuration Release -archivePath build/ios/xcarchive/App.xcarchive archive COMPILER_INDEX_STORE_ENABLE=NO
-      - xcodebuild -exportArchive -archivePath build/ios/xcarchive/App.xcarchive -exportOptionsPlist /Users/builder/export_options.plist -exportPath build/ios/ipa
+      # --- IPA bauen (wie zuvor; Manual ist jetzt ok, weil Profile eingebunden sind) ---
+      - xcode-project build-ipa --workspace "ios/App/App.xcworkspace" --scheme "App" --export-options-plist /Users/builder/export_options.plist
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
