--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,12 +9,12 @@ workflows:
       xcode: latest
       node: 20
     scripts:
-      # Sanity
+      # Sanity / Info
       - 'echo "BUNDLE_ID=$BUNDLE_ID  TEAM_ID=$TEAM_ID"'
       - '[[ -n "$BUNDLE_ID" && -n "$TEAM_ID" ]] || { echo "Env-Variablen fehlen"; exit 1; }'
       - 'echo "Node: $(node -v)  NPM: $(npm -v)"'
 
-      # Build Web + iOS-Gerüst
+      # Build Web + iOS Gerüst
       - npm ci
       - npm run build
       - npx cap add ios || true
@@ -25,12 +25,13 @@ workflows:
       - cd ios/App && pod install --repo-update
       - cd ../../
 
-      # 🔐 Code signing — KEINE fetch-signing-files!
-      - keychain initialize                          # lädt Codemagic-Zertifikate in die Keychain
-      - app-store-connect fetch-profiles --type IOS_APP_STORE --bundle-id "$BUNDLE_ID"
-      - xcode-project use-profiles                   # verdrahtet Profile -> Projekt
+      # 🔐 Code signing (korrekte Reihenfolge!)
+      - keychain initialize
+      - keychain add-certificates
+      - app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
+      - xcode-project use-profiles
 
-      # Export-Options für App Store / TestFlight
+      # Export-Options
       - |
         cat > /Users/builder/export_options.plist <<'PLIST'
         <?xml version="1.0" encoding="UTF-8"?>
@@ -42,7 +43,6 @@ workflows:
 
       # Archiv & Export
       - xcode-project build-ipa --workspace "ios/App/App.xcworkspace" --scheme "App" --export-options-plist /Users/builder/export_options.plist
-
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
