--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,64 +1,27 @@
 workflows:
   ios-internal:
     name: iOS Internal
+    integrations:
+      app_store_connect: asc
     environment:
       groups:
-        - Schumann              # deine Gruppe mit BUNDLE_ID / TEAM_ID
+        - Schumann
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: de.svschumann.schadenaufnahme
       xcode: latest
       node: 20
-      ios_signing:
-        # Variante A (einfach): distribution + bundle-id -> Codemagic wählt passende
-        distribution_type: app_store
-        bundle_identifier: $BUNDLE_ID
-        # 💡 Falls du lieber explizit referenzieren willst (Variante B),
-        #    dann die 2 Zeilen oben auskommentieren und stattdessen:
-        # provisioning_profiles:
-        #   - asc                # Name deines .mobileprovision in Codemagic
-        # certificates:
-        #   - ios_dist           # Produktions-Zertifikat (passt zu app_store)
     scripts:
-      - echo "BUNDLE_ID=$BUNDLE_ID  TEAM_ID=$TEAM_ID"
-      - '[[ -n "$BUNDLE_ID" && -n "$TEAM_ID" ]] || { echo "Env-Variablen fehlen"; exit 1; }'
-      - 'echo "Node: $(node -v)  NPM: $(npm -v)"'
-
-      # Build Web
       - npm ci
       - npm run build
-
-      # iOS-Projekt erzeugen/abgleichen
       - npx cap add ios || true
       - npx cap sync ios
-
-      # CocoaPods
-      - cd ios/App && pod repo update
-      - cd ios/App && pod install --repo-update
-      - cd ../../
-
-      # Profile ins Xcode-Projekt schreiben (wichtig!)
+      - cd ios/App && pod install --repo-update && cd ../..
       - xcode-project use-profiles
-
-      # Export-Options für App Store / TestFlight
-      - |
-        cat > /Users/builder/export_options.plist <<'PLIST'
-        <?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-          <dict>
-            <key>method</key><string>app-store</string>
-          </dict>
-        </plist>
-        PLIST
-
-      # IPA bauen
-      - xcode-project build-ipa \
-          --workspace "ios/App/App.xcworkspace" \
-          --scheme "App" \
-          --export-options-plist /Users/builder/export_options.plist
-
+      - xcode-project build-ipa --workspace "ios/App/App.xcworkspace" --scheme "App"
     artifacts:
       - build/ios/ipa/*.ipa
-
     publishing:
       app_store_connect:
-        auth: integration
+        auth: integrations
         submit_to_testflight: true
