--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,5 +23,5 @@ workflows:
       - build/ios/ipa/*.ipa
     publishing:
       app_store_connect:
-        auth: integrations
+        auth: integration
         submit_to_testflight: true
