--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,51 +8,35 @@ workflows:
         - Schumann
       ios_signing:
         distribution_type: app_store
-        bundle_identifier: "de.svschumann.schadenaufnahme"
+        bundle_identifier: de.svschumann.schadenaufnahme
       xcode: latest
       node: 20
     scripts:
+      - rm -rf ios
       - npm ci
       - npm run build
-      - npx cap add ios || true
+      - npx cap add ios
       - npx cap sync ios
       - '[ -f ios/App/Podfile ] || { echo "Podfile fehlt in ios/App"; ls -la ios/App; exit 1; }'
-      - cd ios/App && pod install --repo-update && cd ../..
+      - cd ios/App && pod install --repo-update
+      - cd ../..
       - |
         PLIST="ios/App/App/Info.plist"
         # Foto-Bibliothek
         /usr/libexec/PlistBuddy -c "Add :NSPhotoLibraryUsageDescription string 'Die App benötigt Zugriff auf die Fotomediathek, um Schadensbilder auszuwählen und hochzuladen.'" "$PLIST" || \
         /usr/libexec/PlistBuddy -c "Set :NSPhotoLibraryUsageDescription 'Die App benötigt Zugriff auf die Fotomediathek, um Schadensbilder auszuwählen und hochzuladen.'" "$PLIST"
-        # Kamera
+        # Kamera (falls ihr mit der Kamera schießt)
         /usr/libexec/PlistBuddy -c "Add :NSCameraUsageDescription string 'Die App benötigt Zugriff auf die Kamera, um Schäden zu fotografieren.'" "$PLIST" || \
         /usr/libexec/PlistBuddy -c "Set :NSCameraUsageDescription 'Die App benötigt Zugriff auf die Kamera, um Schäden zu fotografieren.'" "$PLIST"
-        # Mikrofon (falls nötig)
+        # Mikrofon (nur wenn Videos/Audio, sonst weglassen)
         /usr/libexec/PlistBuddy -c "Add :NSMicrophoneUsageDescription string 'Mikrofonzugriff für Videoaufnahmen (optional).'" "$PLIST" || \
         /usr/libexec/PlistBuddy -c "Set :NSMicrophoneUsageDescription 'Mikrofonzugriff für Videoaufnahmen (optional).'" "$PLIST"
-        # Build-Nummer automatisch erhöhen
+        # Buildnummer immer eindeutig
         BN="${BUILD_NUMBER:-${CM_BUILD_ID:-$(date +%Y%m%d%H%M)}}"
         /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $BN" "$PLIST"
-      - xcode-project use-profiles
-      - xcode-project build-ipa --workspace "ios/App/App.xcworkspace" --scheme "App"
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
       app_store_connect:
         auth: integration
         submit_to_testflight: true
-
-        export_compliance:
-          uses_encryption: false
-
-        beta_app_review:
-          contact_first_name: "Michael"
-          contact_last_name: "Beinhauer"
-          contact_email: "m.beinhauer@sv-schumann.de"
-          contact_phone: "+49 15165873317"
-          demo_account_name: ""
-          demo_account_password: ""
-          notes: "Interner Test über TestFlight."
-
-        beta_build_localizations:
-          - locale: "de-DE"
-            whats_new: "Verbesserungen und Fehlerbehebungen."
